--- a/index.html
+++ b/index.html
@@ -10,25 +10,29 @@
     <h1>Dasmoto's Arts & Crafts</h1>
     <section>
         <h2>Brushes</h2>
+        <img src="./resources/images/hacksaw.jpeg" alt="An image of some brushes" />
         <h3>Hacksaw Brushes</h3>
-        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.
-            Starting at $3.00/brush.
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in
+            large amounts. Available in different sizes. <span class="prices">Starting at $3.00/brush.</span>
         </p>
     </section>
     <section>
         <h2>Frames</h2>
+        <img src="./resources/images/frames.jpeg" alt="An image of a collection of different coloured picture frames" />
         <h3>Art Frames (assorted)</h3>
-        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.
-            Starting at $2.00/frame.
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded
+            and painted according to your needs. <span class="prices">Starting at $2.00/frame.</span>
         </p>
     </section>
     <section>
         <h2>Paint</h2>
+        <img src="./resources/images/finnish.jpeg" alt="An image of some oil paints" />
         <h3>Clean Finnish Paint</h3>
-        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). 
-            Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. 
-            Starting at $5.00/tube.
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.).
+            Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="prices">Starting
+                at $5.00/tube.</span>
         </p>
+
     </section>
 </body>
 
