--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link href="/resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     <title>Dasmoto's Arts and Crafts</title>
 </head>
 
 <body>
     <h1>Dasmoto's Arts & Crafts</h1>
     <section>
-        <h2>Brushes</h2>
+        <h2 class="brushes">Brushes</h2>
         <img src="./resources/images/hacksaw.jpeg" alt="An image of some brushes" />
         <h3>Hacksaw Brushes</h3>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in
@@ -17,7 +17,7 @@
         </p>
     </section>
     <section>
-        <h2>Frames</h2>
+        <h2 class="frames">Frames</h2>
         <img src="./resources/images/frames.jpeg" alt="An image of a collection of different coloured picture frames" />
         <h3>Art Frames (assorted)</h3>
         <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded
@@ -25,14 +25,14 @@
         </p>
     </section>
     <section>
-        <h2>Paint</h2>
+        <h2 class="paint">Paint</h2>
         <img src="./resources/images/finnish.jpeg" alt="An image of some oil paints" />
         <h3>Clean Finnish Paint</h3>
         <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.).
-            Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="prices">Starting
+            Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span
+                class="prices">Starting
                 at $5.00/tube.</span>
         </p>
-
     </section>
 </body>
 
